# Mobile_Robot_Arm

Mobile_Robot_Arm/kist/src/: test_thread.cpp
Mobile_Robot_Arm/kist/src/subsrc/: controller.cpp
Mobile_Robot_Arm/kist/test/: CMakeLists.txt
Mobile_Robot_Arm/~/.vscode-root/: Cookies  TransportSecurity  machineid  storage.json
Mobile_Robot_Arm/~/.vscode-root/Cache/: 41ba5e075e9ff082_0  437ce16c85fe2790_0  475689b5899f4ee2_0  5bf5826c8bde3914_0  7650192f76d1aca4_0  7d9b90d094b8f537_0  c85687354a0e770a_0  cbc42e4c979f69f0_0  d7fc100ae66c2f28_0
Mobile_Robot_Arm/~/.vscode-root/CachedExtensions/: builtin
Mobile_Robot_Arm/~/.vscode-root/GPUCache/: data_1
Mobile_Robot_Arm/~/.vscode-root/Session Storage/: LOG.old
Mobile_Robot_Arm/~/.vscode-root/exthost Crash Reports/: client_id
kist/: CMakeLists.txt
kist/Mobile_Robot_Arm/kist/: CMakeLists.txt
kist/Mobile_Robot_Arm/kist/include/: sync_read_write2.h
kist/Mobile_Robot_Arm/kist/src/: Makefile  cmake_install.cmake  sync_read_write2_save_0430.cpp
kist/Mobile_Robot_Arm/kist/test/: test.cpp
kist/include/: controller.h  linear_read_write.h  sync_read_write2.h  wheel.h
kist/src/: CMakeLists.txt  test_thread.cpp
kist/src/subsrc/: controller.cpp  dynamixel_read_write copy.cpp  dynamixel_read_write.cpp  linear_read_write.cpp  sync_read_write2.cpp  trajectory.cpp  wheel.cpp
~/.vscode-root/: Network Persistent State  languagepacks.json
~/.vscode-root/Cache/: 10474c0d6d67bb77_0  3949714fb636003b_0  5a31c9d9201a6efa_0  625bbe30771f2f39_0  c7bbd795cbd0ea79_0
~/.vscode-root/Cache/index-dir/: the-real-index
~/.vscode-root/CachedData/3c4e3df9e89829dce27b7b5c24508306b151f30d/: Channel-349d45063db1a229111b2c356bd8aec8.code  Config-c9d37786f9a1ce24f6c1947ab9031b8d.code  (+88 more)
~/.vscode-root/Crash Reports/: client_id
~/.vscode-root/GPUCache/: index
~/.vscode-root/Session Storage/: LOG
(+103 files in other folders)
